--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -28,4 +28,4 @@ RUN echo "upstream php-upstream { server ${PHP_UPSTREAM_CONTAINER}:${PHP_UPSTREA
 ADD ./startup.sh /opt/startup.sh
 CMD ["/bin/bash", "/opt/startup.sh"]
 
-EXPOSE 80
+EXPOSE 80 443
