Criacao do BD Auto. & Config. do SSL

--- a/docker/.env
+++ b/docker/.env
@@ -30,7 +30,7 @@ COMPOSE_FILE=docker-compose.yml
 COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names. This is useful if you have multiple projects that use laradock to have seperate containers per project.
-COMPOSE_PROJECT_NAME=laradock
+COMPOSE_PROJECT_NAME=docker
 
 ### PHP Version ###########################################
 
@@ -55,7 +55,7 @@ DOCKER_HOST_IP=10.0.75.1
 ### Remote Interpreter ####################################
 
 # Choose a Remote Interpreter entry matching name. Default is `laradock`
-PHP_IDE_CONFIG=serverName=laradock
+PHP_IDE_CONFIG=serverName=docker
 
 ### Windows Path ##########################################
 
@@ -193,11 +193,11 @@ APACHE_DOCUMENT_ROOT=/var/www/
 ### MYSQL #################################################
 
 MYSQL_VERSION=latest
-MYSQL_DATABASE=default
-MYSQL_USER=default
-MYSQL_PASSWORD=
+MYSQL_DATABASE=ingresse
+MYSQL_USER=root
+MYSQL_PASSWORD=root
 MYSQL_PORT=3307
-MYSQL_ROOT_PASSWORD=
+MYSQL_ROOT_PASSWORD=root
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 ### REDIS #################################################
